--- a/Search/wndSearch.xaml
+++ b/Search/wndSearch.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="GroupProject.Search.wndSearch"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GroupProject.Search"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="GroupProject.Search.wndSearch"
         mc:Ignorable="d"
-        Title="wndSearch" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="wndSearch" Height="366" Width="609">
+    <Canvas>
+        <Button x:Name="btnSearch" Content="Search" Canvas.Left="122" Canvas.Top="248" Height="42" Width="100" FontSize="15"/>
+        <Button x:Name="btnCancel" Content="Cancel" Canvas.Left="395" Canvas.Top="248" Height="42" Width="100" FontSize="15"/>
+    </Canvas>
 </Window>
