--- a/Search/wndSearch.xaml
+++ b/Search/wndSearch.xaml
@@ -8,11 +8,11 @@
         Title="Search" Height="450" Width="800">
     <Canvas>
         <DataGrid x:Name="dgResults" Height="206" Width="445" Canvas.Left="258" Canvas.Top="79"/>
-        <Button x:Name="btnSearch" Content="Search" Canvas.Left="164" Canvas.Top="321" Height="51" Width="120" FontSize="15"/>
-        <Button x:Name="btnCancel" Content="Cancel" Canvas.Left="506" Canvas.Top="321" Height="51" Width="120" FontSize="15"/>
-        <ComboBox Canvas.Left="104" Canvas.Top="248" Width="120"/>
-        <ComboBox Canvas.Left="104" Canvas.Top="166" Width="120"/>
-        <ComboBox Canvas.Left="104" Canvas.Top="95" Width="120"/>
+        <Button x:Name="btnSearch" Content="Search" Canvas.Left="164" Canvas.Top="321" Height="51" Width="120" FontSize="15" Click="btnSearch_Click"/>
+        <Button x:Name="btnCancel" Content="Cancel" Canvas.Left="506" Canvas.Top="321" Height="51" Width="120" FontSize="15" Click="btnCancel_Click"/>
+        <ComboBox x:Name="cbTotalCharge" Canvas.Left="104" Canvas.Top="248" Width="120"/>
+        <ComboBox x:Name="cbInvoiceDate" Canvas.Left="104" Canvas.Top="166" Width="120"/>
+        <ComboBox x:Name="cbInvoiceNum" Canvas.Left="104" Canvas.Top="95" Width="120"/>
 
     </Canvas>
 </Window>
