Added basic navigation based on the way the team wanted to go.

--- a/Item/wndItems.xaml
+++ b/Item/wndItems.xaml
@@ -83,6 +83,13 @@
                     FontSize="15" 
                     HorizontalAlignment="Right" 
                     Margin="10"/>
+            
+            <Button x:Name="ExitButton" 
+                    Content="Exit" 
+                    Width="120" 
+                    FontSize="15" 
+                    HorizontalAlignment="Right" 
+                    Margin="10"/>
         </StackPanel>
     </Grid>
 </Window>
