Udpdated the repository to work with dapper and the access database. you need to add it to bin/debug/ like the reservation assignment

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -51,7 +51,7 @@
               Style="{StaticResource MaterialDesignFilledDatePicker}" 
               Margin="10"  
                 />
-            <ComboBox x:Name="ItemsComboBox"  Width="140" Margin="10"/>
+            <ComboBox x:Name="ItemsComboBox" ItemsSource="{Binding Items}" DisplayMemberPath="ItemDesc" Width="140" Margin="10"/>
             <Button Content="Add LineItem" Width="140" Margin="10"/>
         </StackPanel>
         <!--invoice actions-->
