--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="GroupProject.MainWindow"
+        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,7 +14,7 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="750" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -21,7 +22,7 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="6*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <!--Menu for switching between views-->
@@ -40,19 +41,45 @@
             </MenuItem>
         </Menu>
         <!--Data grid for displaying the line items on new or selected invoice also will be used for deleting line items-->
-        <DataGrid x:Name="LineItemDataGrid" Grid.Row="1" Grid.Column="0"/>
+        <DataGrid x:Name="LineItemDataGrid" Grid.Row="1" ItemsSource="{Binding SelectedInvoiceItems}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" Grid.Column="0" SelectionMode="Single" SelectionUnit="FullRow" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ItemCode" Binding="{Binding ItemCode}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding ItemDesc}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding Cost}" IsReadOnly="True"/>
+                <DataGridTextColumn/>
+                <DataGridTemplateColumn  Header="Action" IsReadOnly="False">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button x:Name="ExitGameButton" Command="Delete"  Margin="3" Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}">
+                                <materialDesign:PackIcon Kind="Delete"  Height="16" Width="16"/>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center"  VerticalAlignment="Center" Grid.Row="2" Grid.Column="0">
+            <ComboBox x:Name="ItemsComboBox" ItemsSource="{Binding Items}" DisplayMemberPath="ItemDesc" Width="140" Margin="10"/>
+            <Button  Width="35" Height="35" Click="AddItemButton_Click" Margin="10"  Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" >
+                <materialDesign:PackIcon Kind="Add"  Height="16" Width="16"/>
+                
+            </Button>
+        </StackPanel>
         <!--Form for Invoice allowing to add items and edit or add invoice organization will changes not sure what I want yet-->
         <StackPanel Grid.Row="1" Grid.Column="1" >
+            <StackPanel Orientation="Horizontal">           
             <TextBox materialDesign:HintAssist.Hint="InvoiceId" Width="140" Margin="10"/>
             <TextBox materialDesign:HintAssist.Hint="TotalCost" Width="140" IsEnabled="False" Margin="10"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
             <DatePicker
               Width="140"
               materialDesign:HintAssist.Hint="Pick Date"
               Style="{StaticResource MaterialDesignFilledDatePicker}" 
               Margin="10"  
                 />
-            <ComboBox x:Name="ItemsComboBox" ItemsSource="{Binding Items}" DisplayMemberPath="ItemDesc" Width="140" Margin="10"/>
-            <Button Content="Add LineItem" Width="140" Margin="10"/>
+            </StackPanel>
+            
         </StackPanel>
         <!--invoice actions-->
         <StackPanel 
@@ -61,9 +88,9 @@
             Orientation="Horizontal" 
             HorizontalAlignment="Center">
             
-            <Button Content="Delete" Margin="10"/>
-            <Button Content="Save" Margin="10"/>
-            <Button Content="New" Margin="10"/>
+            <Button Content="Delete" Margin="10" Click="DeleteButton_Click"/>
+            <Button Content="Save" Margin="10" Click="NewButton_Click"/>
+            <Button Content="New" Margin="10" Click="SaveButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
