--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -113,8 +113,8 @@
             HorizontalAlignment="Center">
             
             <Button Content="Delete" Margin="10" Click="DeleteButton_Click"/>
-            <Button Content="Save" Margin="10" Click="NewButton_Click"/>
-            <Button Content="New" Margin="10" Click="SaveButton_Click"/>
+            <Button Content="Save" Margin="10" Click="SaveButton_Click"/>
+            <Button Content="New" Margin="10" Click="NewButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
