Update to remove parts of dapper contrib that don't work.

--- a/Item/wndItems.xaml
+++ b/Item/wndItems.xaml
@@ -45,7 +45,7 @@
                      Margin="10"
                      VerticalContentAlignment="Center" 
                      FontSize="18"  
-                     materialDesign:HintAssist.Hint="6.00"/>
+                     materialDesign:HintAssist.Hint="$6.00"/>
             
             <Label x:Name="lblCode" 
                    Content="Code" 
