--- a/Main/MainWindow.xaml
+++ b/Main/MainWindow.xaml
@@ -1,5 +1,4 @@
 ﻿<Window x:Class="GroupProject.MainWindow"
-        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -33,7 +32,6 @@
                 Foreground="White"
                 Icon="{materialDesign:PackIcon Kind=Menu}">
                 <MenuItem
-
                     Foreground="White"
                     Header="Search"
                     Click="NavigateToSearch"
@@ -56,7 +54,7 @@
                 <DataGridTemplateColumn  Header="Action" IsReadOnly="False">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button x:Name="ExitGameButton" Command="Delete"  Margin="3" Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}">
+                            <Button x:Name="DeleteItemButton" Command="Delete"  Margin="3" Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" Opacity="1">
                                 <materialDesign:PackIcon Kind="Delete"  Height="16" Width="16"/>
                             </Button>
                         </DataTemplate>
@@ -64,6 +62,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <!--section for adding invoices-->
         <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center"  VerticalAlignment="Center" Grid.Row="2" Grid.Column="0">
             <ComboBox x:Name="ItemsComboBox" ItemsSource="{Binding Items}" DisplayMemberPath="ItemDesc" Width="140" Margin="10"/>
             <Button  Width="35" Height="35" Click="AddItemButton_Click" Margin="10"  Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" >
@@ -71,7 +70,7 @@
                 
             </Button>
         </StackPanel>
-        <!--Form for Invoice allowing to add items and edit or add invoice organization will changes not sure what I want yet-->
+        <!--Form for Invoice allowingedit or add invoice organization will changes not sure what I want yet-->
         <StackPanel Grid.Row="1" Grid.Column="1" >
             <StackPanel Orientation="Horizontal" Margin="5">
                 <StackPanel>
