--- a/Main/wndMain.xaml
+++ b/Main/wndMain.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GroupProject"
         mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:main="clr-namespace:GroupProject.Main" d:DataContext="{d:DesignInstance Type=main:MainViewModel}"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:main="clr-namespace:GroupProject.Main" d:DataContext="{d:DesignInstance Type=main:clsMainLogic}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
